Bug 55818 - [gstreamer-vaapi] Playbin2 autosink does not output non-VAAPI streams to Wayland
Summary: [gstreamer-vaapi] Playbin2 autosink does not output non-VAAPI streams to Wayland
Status: RESOLVED FIXED
Alias: None
Product: libva
Classification: Unclassified
Component: intel (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium minor
Assignee: Zhao Halley
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-09 20:00 UTC by Joe Konno
Modified: 2013-08-29 17:19 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
gst-launch -v playbin2 (5.81 KB, text/plain)
2012-10-09 20:00 UTC, Joe Konno
Details

Description Joe Konno 2012-10-09 20:00:47 UTC
Created attachment 68356 [details]
gst-launch -v playbin2

With Weston-DRM running, it does not appear possible to play a VP8 stream (not VAAPI accelerated) and have it output to a Wayland sink. Instead, gst-launch refuses to play the stream at all, claiming autovideosink is not functioning. See attached verbose gst-launch output for more information.

Setting severity to 'minor' since I am playing a non-VAAPI-accelerated stream with 'gstreamer-vaapi' code.


gst-launch -v snippet
---------------------

/GstPlayBin2:playbin20/GstInputSelector:inputselector0.GstSelectorPad:sink0: always-ok = FALSE
/GstPlayBin2:playbin20/GstInputSelector:inputselector1.GstSelectorPad:sink0: always-ok = FALSE
/GstPlayBin2:playbin20/GstInputSelector:inputselector1: active-pad = (GstSelectorPad) sink0
/GstPlayBin2:playbin20/GstInputSelector:inputselector1: active-pad = (GstSelectorPad) sink0
/GstPlayBin2:playbin20/GstInputSelector:inputselector0.GstSelectorPad:sink0: tags = ((GstTagList*) 0x7f5734001320)
ERROR: from element /GstPlayBin2:playbin20/GstPlaySink:playsink: The autovideosink element is not working.
Additional debug info:
gstplaysink.c(1832): gen_video_chain (): /GstPlayBin2:playbin20/GstPlaySink:playsink
ERROR: pipeline doesn't want to preroll.
Setting pipeline to NULL ...


Code State
----------

wayland master 5495bcd15a7ea160d3ff4568f4746e33ed042aae
weston master 71c474416a592a00db1f136eec822b2dbce0132f
gstreamer-vaapi master 84f308010fe78d1752ecb244018a0735c32e994d
gstreamer 0.10 bbec3d4e2f4f0ce4a20fd7ce2b1bcae257df01b7
gst-plugins-bad 0.10 61bebbd5144d06534491ac6f0746d6a4e7db07f7
gst-plugins-base 0.10 33826c572bc41d84f2094ca6ade11d4c60a586b4
gst-plugins-good 0.10 a9f697375b2762e6db5b76f7c64089a9b9c32296
Comment 1 Zhao Halley 2012-10-11 05:46:47 UTC
in fact, I have some patches request for merge:
https://gitorious.org/vaapi/gstreamer-vaapi/merge_requests/19
Comment 2 Gwenole Beauchesne 2013-08-29 17:10:27 UTC
Fixed in git master branch. Though, you are required to use gstreamer-vaapi for SW decoded pipelines on Wayland too. :)

Tested with both GStreamer 0.10 and 1.0 builds.
Comment 3 Gwenole Beauchesne 2013-08-29 17:19:48 UTC
commit bc10bbfc3ffb8f80f761bc0bb7fa1b689f371908
Author: Gwenole Beauchesne <gwenole.beauchesne@intel.com>
Date:   Thu Aug 29 18:34:57 2013 +0200

    vaapisink: handle raw buffers not created from VA video buffer pool.
    
    Handle raw video buffers that were not created from a VA video buffer
    pool. Use the generic GstVideo API to copy buffers in GStreamer 1.0.x
    builds instead of the GstVaapiUploader.
    
    https://bugs.freedesktop.org/show_bug.cgi?id=55818


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.